# thisvid

./: .gitignore  README.md  STATUS.md  agents.md  monorepo.md  package-lock.json  package.json  specsheet.md  tsconfig.json  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  http_server.rs  lib.rs  main.rs  sidecar.rs  state.rs  types.rs
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
