[package]
name = "thisvid"
version = "0.1.0"
description = "thisvid — Local-first video downloader"
authors = ["tur-ky"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thisvid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ── Tauri core ────────────────────────────────────────────────────────────────
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }

# ── Tauri plugins ─────────────────────────────────────────────────────────────
tauri-plugin-shell  = "2.0"
tauri-plugin-fs     = "2.0"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── HTTP server (headless local listener) ────────────────────────────────────
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[profile.dev]
incremental = true

[profile.release]
panic      = "abort"
codegen-units = 1
lto        = true
opt-level  = "s"
strip      = true
